# rrpp-agent-brigde

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/agent-guide/: ARCHITECTURE.md  DECISIONS.md  DELIVERY.md  ERRORS.md  KNOWLEDGE.md  PROJECT_BRIEF.md  README.md  SECURITY.md  WORKFLOW.md
rrpp_bridge/: __init__.py  agent.py  audit.py  cli.py  config.py  db.py  executor.py  models.py  policy.py  queue.py  service.py  web.py
rrpp_bridge/adapters/: __init__.py  local.py
rrpp_bridge/sql/: 001_initial.sql  002_milestone_one_hardening.sql  __init__.py
rrpp_bridge/static/: dashboard.css
scripts/: run-local.ps1
tests/: test_bridge.py
