[project]
name = "rrpp-agent-bridge"
version = "0.1.0"
description = "Safe and observable bridge foundation for future promoter agents"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.0,<3",
    "google-auth-httplib2>=0.2,<1",
    "google-auth-oauthlib>=1.2,<2",
]

[project.scripts]
rrpp-bridge = "rrpp_bridge.cli:main"

[build-system]
requires = ["hatchling>=1.30"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["rrpp_bridge"]

[tool.hatch.build]
include = ["rrpp_bridge/**/*.py", "rrpp_bridge/sql/*.sql", "rrpp_bridge/static/*.css"]
